machine-bindings/cartesi-machine-sys/src/headers/machine-c-api.h

// ---------------------------------
// API Structures
// ---------------------------------

// NOLINTNEXTLINE(cppcoreguidelines-avoid-c-arrays,modernize-avoid-c-arrays,modernize-use-using)
typedef uint8_t cm_hash[CM_MACHINE_HASH_BYTE_SIZE];
/// \brief Array of hashes
typedef struct { // NOLINT(modernize-use-using)
    cm_hash *entry;
    size_t count;
} cm_hash_array;
/// \brief Type of state access
typedef enum {       // NOLINT(modernize-use-using)
    CM_ACCESS_READ,  ///< Read operation
    CM_ACCESS_WRITE, ///< Write operation
} CM_ACCESS_TYPE;
/// \brief Type of access log
typedef struct {      // NOLINT(modernize-use-using)
    bool proofs;      ///< Includes proofs
    bool annotations; ///< Includes annotations
    bool large_data;  ///< Includes data bigger than 8 bytes
} cm_access_log_type;
/// \brief Bracket type
typedef enum {        // NOLINT(modernize-use-using)
    CM_BRACKET_BEGIN, ///< Start of scope
    CM_BRACKET_END    ///< End of scope
} CM_BRACKET_TYPE;
/// \brief Bracket note
typedef struct {          // NOLINT(modernize-use-using)
    CM_BRACKET_TYPE type; ///< Bracket type
    uint64_t where;       ///< Where it points to in the log
    char *text;           ///< Note text
} cm_bracket_note;
/// \brief Records an access to the machine state
typedef struct {                   // NOLINT(modernize-use-using)
    CM_ACCESS_TYPE type;           ///< Type of access
    uint64_t address;              ///< Address of access
    int log2_size;                 ///< Log2 of size of access
    cm_hash read_hash;             ///< Hash of data before access
    uint8_t *read_data;            ///< Data before access
    size_t read_data_size;         ///< Size of data before access in bytes
    cm_hash written_hash;          ///< Hash of data after access (if writing)
    uint8_t *written_data;         ///< Data after access (if writing)
    size_t written_data_size;      ///< Size of data after access in bytes
    cm_hash_array *sibling_hashes; ///< Sibling hashes towards root
} cm_access;
/// \brief Array of accesses
typedef struct { // NOLINT(modernize-use-using)
    cm_access *entry;
    size_t count;
} cm_access_array;
/// \brief Array of bracket notes
typedef struct { // NOLINT(modernize-use-using)
    cm_bracket_note *entry;
    size_t count;
} cm_bracket_note_array;
/// \brief Array of notes
typedef struct { // NOLINT(modernize-use-using)
    const char **entry;
    size_t count;
} cm_note_array;
/// \brief Log of state accesses
typedef struct {                    // NOLINT(modernize-use-using)
    cm_access_array accesses;       ///< List of accesses
    cm_bracket_note_array brackets; ///< Begin/End annotations
    cm_note_array notes;            ///< Per-access annotations
    cm_access_log_type log_type;    ///< Log type
} cm_access_log;
/// \brief Concurrency runtime configuration
typedef struct { // NOLINT(modernize-use-using)
    uint64_t update_merkle_tree;
} cm_concurrency_runtime_config;