machine-bindings/cartesi-machine-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_cm_bracket_note() {
    const UNINIT: ::std::mem::MaybeUninit<cm_bracket_note> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_bracket_note>(),
        24usize,
        concat!("Size of: ", stringify!(cm_bracket_note))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_bracket_note>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_bracket_note))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_bracket_note),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).where_) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_bracket_note),
            "::",
            stringify!(where_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).text) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_bracket_note),
            "::",
            stringify!(text)
        )
    );
}
#[doc = " \\brief Records an access to the machine state"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_access {
    #[doc = "< Type of access"]
    pub type_: CM_ACCESS_TYPE,
    #[doc = "< Address of access"]
    pub address: u64,
    #[doc = "< Log2 of size of access"]
    pub log2_size: ::std::os::raw::c_int,
    #[doc = "< Hash of data before access"]
    pub read_hash: cm_hash,
    #[doc = "< Data before access"]
    pub read_data: *mut u8,
    #[doc = "< Size of data before access in bytes"]
    pub read_data_size: usize,
    #[doc = "< Hash of data after access (if writing)"]
    pub written_hash: cm_hash,
    #[doc = "< Data after access (if writing)"]
    pub written_data: *mut u8,
    #[doc = "< Size of data after access in bytes"]
    pub written_data_size: usize,
    #[doc = "< Sibling hashes towards root"]
    pub sibling_hashes: *mut cm_hash_array,
}
#[test]
fn bindgen_test_layout_cm_access() {
    const UNINIT: ::std::mem::MaybeUninit<cm_access> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_access>(),
        128usize,
        concat!("Size of: ", stringify!(cm_access))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_access>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_access))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).address) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access),
            "::",
            stringify!(address)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).log2_size) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access),
            "::",
            stringify!(log2_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).read_hash) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access),
            "::",
            stringify!(read_hash)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).read_data) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access),
            "::",
            stringify!(read_data)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).read_data_size) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access),
            "::",
            stringify!(read_data_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).written_hash) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access),
            "::",
            stringify!(written_hash)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).written_data) as usize - ptr as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access),
            "::",
            stringify!(written_data)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).written_data_size) as usize - ptr as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access),
            "::",
            stringify!(written_data_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sibling_hashes) as usize - ptr as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access),
            "::",
            stringify!(sibling_hashes)
        )
    );
}
#[doc = " \\brief Array of accesses"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_access_array {
    pub entry: *mut cm_access,
    pub count: usize,
}
#[test]
fn bindgen_test_layout_cm_access_array() {
    const UNINIT: ::std::mem::MaybeUninit<cm_access_array> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_access_array>(),
        16usize,
        concat!("Size of: ", stringify!(cm_access_array))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_access_array>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_access_array))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).entry) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access_array),
            "::",
            stringify!(entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).count) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access_array),
            "::",
            stringify!(count)
        )
    );
}
#[doc = " \\brief Array of bracket notes"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_bracket_note_array {
    pub entry: *mut cm_bracket_note,
    pub count: usize,
}
#[test]
fn bindgen_test_layout_cm_bracket_note_array() {
    const UNINIT: ::std::mem::MaybeUninit<cm_bracket_note_array> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_bracket_note_array>(),
        16usize,
        concat!("Size of: ", stringify!(cm_bracket_note_array))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_bracket_note_array>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_bracket_note_array))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).entry) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_bracket_note_array),
            "::",
            stringify!(entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).count) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_bracket_note_array),
            "::",
            stringify!(count)
        )
    );
}
#[doc = " \\brief Array of notes"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_note_array {
    pub entry: *mut *const ::std::os::raw::c_char,
    pub count: usize,
}
#[test]
fn bindgen_test_layout_cm_note_array() {
    const UNINIT: ::std::mem::MaybeUninit<cm_note_array> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_note_array>(),
        16usize,
        concat!("Size of: ", stringify!(cm_note_array))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_note_array>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_note_array))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).entry) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_note_array),
            "::",
            stringify!(entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).count) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_note_array),
            "::",
            stringify!(count)
        )
    );
}
#[doc = " \\brief Log of state accesses"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_access_log {
    #[doc = "< List of accesses"]
    pub accesses: cm_access_array,
    #[doc = "< Begin/End annotations"]
    pub brackets: cm_bracket_note_array,
    #[doc = "< Per-access annotations"]
    pub notes: cm_note_array,
    #[doc = "< Log type"]
    pub log_type: cm_access_log_type,
}
#[test]
fn bindgen_test_layout_cm_access_log() {
    const UNINIT: ::std::mem::MaybeUninit<cm_access_log> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_access_log>(),
        56usize,
        concat!("Size of: ", stringify!(cm_access_log))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_access_log>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_access_log))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).accesses) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access_log),
            "::",
            stringify!(accesses)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).brackets) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access_log),
            "::",
            stringify!(brackets)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).notes) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access_log),
            "::",
            stringify!(notes)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).log_type) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_access_log),
            "::",
            stringify!(log_type)
        )
    );
}
#[doc = " \\brief Concurrency runtime configuration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_concurrency_runtime_config {
    pub update_merkle_tree: u64,
}
#[test]
fn bindgen_test_layout_cm_concurrency_runtime_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_concurrency_runtime_config> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_concurrency_runtime_config>(),
        8usize,
        concat!("Size of: ", stringify!(cm_concurrency_runtime_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_concurrency_runtime_config>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_concurrency_runtime_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).update_merkle_tree) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_concurrency_runtime_config),
            "::",
            stringify!(update_merkle_tree)
        )
    );
}
